@@ -1,8 +1,9 @@
 TODO
 ====
 1. ERRORS section.
-2. Test errors in constructor.
 3.
 
 Applied
 =======
+2. Test errors in constructor.
+OK [20230621] skim
