@@ -1,4 +1,5 @@
 0.02
+ - Add tests for errors in constructor.
  - Fix link to repository and bugtracker.
 
 0.01 2023-06-10T18:59:18+02:00
